Add booking components and internationalization support
- Add BookingWidget component with date selection
- Add StickyBookingForm for persistent booking UI
- Add Footer component with contact and links
- Add LanguageSwitcher with i18n store for multi-language support
- Update homepage with hotel content and room showcases
- Add SEO files (robots.txt, sitemap.xml)
- Update design tokens and component exports

--- a/src/app.html
+++ b/src/app.html
@@ -1,11 +1,20 @@
 <!-- src/app.html -->
 <!doctype html>
-<html lang="en">
+<html lang="de">
 
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  
+  <!-- Basic SEO -->
+  <meta name="robots" content="index, follow" />
+  <meta name="author" content="Hotel Ludwig van Beethoven Berlin" />
+  
+  <!-- Preconnect to external domains -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  
   %sveltekit.head%
 </head>
 
