--- a/src/app.html
+++ b/src/app.html
@@ -15,6 +15,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   
+  <!-- Preload critical hero image (LCP element) -->
+  <link rel="preload" href="/hlvb_backside_header.webp" as="image" type="image/webp" fetchpriority="high" />
+  
   <!-- Preload critical fonts -->
   <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459W1hyzbi.woff2" as="font" type="font/woff2" crossorigin />
   <link rel="preload" href="https://fonts.gstatic.com/s/crimsontext/v19/wlp2gwHKFkZgtmSR3NB0oRJX8A.woff2" as="font" type="font/woff2" crossorigin />
@@ -22,6 +25,11 @@
   <!-- Web App Manifest -->
   <link rel="manifest" href="/manifest.json" />
   <meta name="theme-color" content="#5a4e47" />
+  
+  <!-- Critical CSS - Inline for faster FCP -->
+  <style>
+    :root{--color-background:#f6f4f3;--color-text:#5a4e47;--color-secondary:#1a4a6b;--space-sm:0.5rem;--space-md:1rem;--space-lg:1.5rem;--space-xl:2rem;--space-2xl:3rem;--space-3xl:4rem;--space-4xl:6rem;--font-primary:'Montserrat',-apple-system,BlinkMacSystemFont,sans-serif;--font-display:'Crimson Text',Georgia,serif;--font-size-base:1rem;--font-size-lg:1.125rem;--font-size-xl:1.25rem;--font-size-2xl:1.5rem;--font-size-3xl:1.875rem;--font-size-4xl:2.25rem;--font-size-5xl:3rem;--font-weight-normal:400;--font-weight-medium:500;--font-weight-semibold:600;--font-weight-bold:700;--line-height-tight:1.25;--line-height-normal:1.5;--radius-lg:0.5rem;--radius-xl:0.75rem;--shadow-lg:0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);--transition-fast:150ms cubic-bezier(0.4,0,0.2,1);--transition-normal:300ms cubic-bezier(0.4,0,0.2,1)}*{box-sizing:border-box;margin:0;padding:0}html{background-color:var(--color-background);scroll-behavior:smooth}body{font-family:var(--font-primary);color:var(--color-text);line-height:var(--line-height-normal);-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}.header,.header-centered{position:sticky;top:0;z-index:100;background:rgba(255,255,255,0.95);backdrop-filter:blur(20px);border-bottom:1px solid rgba(0,0,0,0.06);height:100px}.header-centered{height:110px}.hero-wrapper{position:relative;min-height:100vh;overflow:hidden}.hero{position:relative;min-height:100vh;display:flex;align-items:center;justify-content:center}.hero-image-container{position:absolute;top:0;left:0;width:100%;height:100%;z-index:1}.hero-image{width:100%;height:100%;object-fit:cover;object-position:center}.hero-overlay{position:absolute;top:0;left:0;width:100%;height:100%;background:linear-gradient(135deg,rgba(90,78,71,0.7) 0%,rgba(26,74,107,0.6) 100%);z-index:2}.hero-content{position:relative;z-index:3;text-align:center;color:white;max-width:1200px;margin:0 auto;padding:0 var(--space-lg)}.hero-title{font-family:var(--font-display);font-size:var(--font-size-5xl);font-weight:var(--font-weight-bold);margin-bottom:var(--space-lg);line-height:var(--line-height-tight)}.container{max-width:1400px;margin:0 auto;padding:0 var(--space-lg)}@media (max-width:768px){.header,.header-centered{height:80px}.hero-title{font-size:var(--font-size-3xl)}.container{padding:0 var(--space-md)}}
+  </style>
   
   %sveltekit.head%
 </head>
