Fix LCP measurement issues for better Core Web Vitals
- Correct hero image dimensions to actual file size (1920x799 vs 2560x1440)
- Disable problematic srcset generation that interferes with LCP detection
- Add media query to preload link for better browser optimization
- Ensure hero image is properly measured as Largest Contentful Paint element

This should resolve the NO_LCP error and provide accurate LCP measurements

--- a/src/app.html
+++ b/src/app.html
@@ -16,7 +16,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   
   <!-- Preload critical hero image (LCP element) -->
-  <link rel="preload" href="/hlvb_backside_header.webp" as="image" type="image/webp" fetchpriority="high" />
+  <link rel="preload" href="/hlvb_backside_header.webp" as="image" type="image/webp" fetchpriority="high" media="(min-width: 320px)" />
   
   <!-- Preload critical fonts -->
   <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459W1hyzbi.woff2" as="font" type="font/woff2" crossorigin />
