--- a/src/app.html
+++ b/src/app.html
@@ -11,17 +11,38 @@
   <meta name="robots" content="index, follow" />
   <meta name="author" content="Hotel Ludwig van Beethoven Berlin" />
   
-  <!-- Preconnect to external domains -->
+  <!-- DNS Prefetch for faster resolution -->
+  <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+  <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
+  
+  <!-- Preconnect to external domains with higher priority -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   
-  <!-- Preload critical hero images (LCP element) - mobile-first -->
-  <link rel="preload" href="/hlvb_backside_header_mobile.webp" as="image" type="image/webp" fetchpriority="high" media="(max-width: 768px)" />
+  <!-- Preload critical hero images (LCP element) - mobile-first with ultra-optimized version -->
+  <link rel="preload" href="/hlvb_backside_header_mobile_opt.webp" as="image" type="image/webp" fetchpriority="high" media="(max-width: 480px)" />
+  <link rel="preload" href="/hlvb_backside_header_mobile.webp" as="image" type="image/webp" fetchpriority="high" media="(min-width: 481px) and (max-width: 768px)" />
   <link rel="preload" href="/hlvb_backside_header.webp" as="image" type="image/webp" fetchpriority="high" media="(min-width: 769px)" />
   
-  <!-- Preload critical fonts -->
-  <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459W1hyzbi.woff2" as="font" type="font/woff2" crossorigin />
-  <link rel="preload" href="https://fonts.gstatic.com/s/crimsontext/v19/wlp2gwHKFkZgtmSR3NB0oRJX8A.woff2" as="font" type="font/woff2" crossorigin />
+  <!-- Inline critical font CSS to prevent FOIT -->
+  <style>
+    @font-face {
+      font-family: 'Montserrat';
+      font-style: normal;
+      font-weight: 400;
+      font-display: swap;
+      src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459W1hyzbi.woff2) format('woff2');
+      unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+    }
+    @font-face {
+      font-family: 'Crimson Text';
+      font-style: normal;
+      font-weight: 400;
+      font-display: swap;
+      src: url(https://fonts.gstatic.com/s/crimsontext/v19/wlp2gwHKFkZgtmSR3NB0oRJX8A.woff2) format('woff2');
+      unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+    }
+  </style>
   
   <!-- Web App Manifest -->
   <link rel="manifest" href="/manifest.json" />
