Fix broken LCP by reverting to simpler picture element approach
- Remove ultra-optimized mobile image (3-tier approach)
- Revert to 2-tier responsive images (mobile/desktop)
- Use consistent dimensions (1920x799) for proper LCP detection
- Keep mobile optimization with 62KB image for mobile devices

The aggressive optimization with 3 image sizes and different dimensions
broke LCP detection. This simpler approach maintains performance benefits
while ensuring LCP is properly measured.

--- a/src/app.html
+++ b/src/app.html
@@ -19,9 +19,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   
-  <!-- Preload critical hero images (LCP element) - mobile-first with ultra-optimized version -->
-  <link rel="preload" href="/hlvb_backside_header_mobile_opt.webp" as="image" type="image/webp" fetchpriority="high" media="(max-width: 480px)" />
-  <link rel="preload" href="/hlvb_backside_header_mobile.webp" as="image" type="image/webp" fetchpriority="high" media="(min-width: 481px) and (max-width: 768px)" />
+  <!-- Preload critical hero images (LCP element) - mobile-first -->
+  <link rel="preload" href="/hlvb_backside_header_mobile.webp" as="image" type="image/webp" fetchpriority="high" media="(max-width: 768px)" />
   <link rel="preload" href="/hlvb_backside_header.webp" as="image" type="image/webp" fetchpriority="high" media="(min-width: 769px)" />
   
   <!-- Inline critical font CSS to prevent FOIT -->
