Optimize LCP hero image: preload link + correct dimensions (1920x799)
- Add preload link for hero image in app.html
- Fix image dimensions from oversized 2560x1440 to actual 1920x799
- Update max-width constraint to match real image size
- Should significantly improve Largest Contentful Paint performance

--- a/src/app.html
+++ b/src/app.html
@@ -43,6 +43,9 @@
     }
   </style>
   
+  <!-- Preload LCP hero image -->
+  <link rel="preload" href="https://images.prismic.io/hotel-ludwig-van-beethoven/aKRlHaTt2nPbadSU_hlvb_backside_header.webp?auto=format%2Ccompress&fit=crop&q=75&w=1920&h=799&fm=webp" as="image" />
+  
   <!-- Web App Manifest -->
   <link rel="manifest" href="/manifest.json" />
   <meta name="theme-color" content="#5a4e47" />
