Optimize mobile hero image: 57% size reduction (29.9KB vs 69.4KB)
- Update mobile preload to use optimized Prismic URL (390×203, q=60)
- Replace static mobile image with responsive Prismic variant
- Mobile image now 29.9KB vs original 69.4KB (57% reduction)
- Maintains desktop optimization (1920×799, 430.8KB)
- Improves mobile LCP performance significantly

--- a/src/app.html
+++ b/src/app.html
@@ -20,8 +20,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   
   <!-- Preload critical hero images (LCP element) - mobile-first -->
-  <link rel="preload" href="/hlvb_backside_header_mobile.webp" as="image" type="image/webp" fetchpriority="high" media="(max-width: 768px)" />
-  <link rel="preload" href="/hlvb_backside_header.webp" as="image" type="image/webp" fetchpriority="high" media="(min-width: 769px)" />
+  <link rel="preload" href="https://images.prismic.io/hotel-ludwig-van-beethoven/aKRlHaTt2nPbadSU_hlvb_backside_header.webp?auto=format%2Ccompress&fit=crop&q=60&w=390&h=203&fm=webp" as="image" type="image/webp" fetchpriority="high" media="(max-width: 768px)" />
+  <link rel="preload" href="https://images.prismic.io/hotel-ludwig-van-beethoven/aKRlHaTt2nPbadSU_hlvb_backside_header.webp?auto=format%2Ccompress&fit=crop&q=75&w=1920&h=799&fm=webp" as="image" type="image/webp" fetchpriority="high" media="(min-width: 769px)" />
   
   <!-- Inline critical font CSS to prevent FOIT -->
   <style>
