--- a/src/app.html
+++ b/src/app.html
@@ -14,14 +14,16 @@
   <!-- DNS Prefetch for faster resolution -->
   <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
   <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
+  <link rel="dns-prefetch" href="https://images.prismic.io" />
   
   <!-- Preconnect to external domains with higher priority -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preconnect" href="https://images.prismic.io" crossorigin />
   
   <!-- Preload critical hero images (LCP element) - mobile-first -->
-  <link rel="preload" href="/hlvb_backside_header_mobile.webp" as="image" type="image/webp" fetchpriority="high" media="(max-width: 768px)" />
-  <link rel="preload" href="/hlvb_backside_header.webp" as="image" type="image/webp" fetchpriority="high" media="(min-width: 769px)" />
+  <link rel="preload" href="https://images.prismic.io/hotel-ludwig-van-beethoven/aKRlHaTt2nPbadSU_hlvb_backside_header.webp?auto=format%2Ccompress&fit=crop&q=60&w=390&h=203&fm=webp" as="image" type="image/webp" fetchpriority="high" media="(max-width: 768px)" />
+  <link rel="preload" href="https://images.prismic.io/hotel-ludwig-van-beethoven/aKRlHaTt2nPbadSU_hlvb_backside_header.webp?auto=format%2Ccompress&fit=crop&q=75&w=1920&h=799&fm=webp" as="image" type="image/webp" fetchpriority="high" media="(min-width: 769px)" />
   
   <!-- Load fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Crimson+Text:wght@400;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
