--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="%sveltekit.assets%/favicon.ico" />
+  <link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="48x48" href="%sveltekit.assets%/favicon-48x48.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   
   <!-- Basic SEO -->
