--- a/src/app.html
+++ b/src/app.html
@@ -25,11 +25,15 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="preconnect" href="https://images.prismic.io" crossorigin />
   
-  <!-- Preload critical hero image (LCP element) - mobile-optimized -->
-  <link rel="preload" href="https://images.prismic.io/hotel-ludwig-van-beethoven/aKRlHaTt2nPbadSU_hlvb_backside_header.webp?auto=format%2Ccompress&fit=crop&q=60&w=390&h=203&fm=webp" as="image" type="image/webp" fetchpriority="high" />
+  <!-- Preload critical hero image (LCP element) - responsive -->
+  <link rel="preload" href="https://images.prismic.io/hotel-ludwig-van-beethoven/aKRlHaTt2nPbadSU_hlvb_backside_header.webp?auto=format%2Ccompress&fit=crop&q=60&w=390&h=203&fm=webp" as="image" type="image/webp" fetchpriority="high" media="(max-width: 768px)" />
+  <link rel="preload" href="https://images.prismic.io/hotel-ludwig-van-beethoven/aKRlHaTt2nPbadSU_hlvb_backside_header.webp?auto=format%2Ccompress&fit=crop&q=75&w=1920&h=799&fm=webp" as="image" type="image/webp" fetchpriority="high" media="(min-width: 769px)" />
   
-  <!-- Load fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Crimson+Text:wght@400;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
+  <!-- Load fonts asynchronously to prevent render blocking -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Crimson+Text:wght@400;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" media="print" onload="this.media='all'" />
+  <noscript>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Crimson+Text:wght@400;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
+  </noscript>
   
   
   <!-- Web App Manifest -->
@@ -43,14 +47,15 @@
 <body data-sveltekit-preload-data="hover">
   <div style="display: contents">%sveltekit.body%</div>
   
-  <!-- Service Worker Registration -->
+  <!-- Service Worker Registration - deferred to not block initial load -->
   <script>
     if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => {
+      // Delay SW registration to avoid blocking critical resources
+      setTimeout(() => {
         navigator.serviceWorker.register('/sw.js')
           .then(registration => console.log('SW registered'))
           .catch(error => console.log('SW registration failed:', error));
-      });
+      }, 2000);
     }
   </script>
 </body>
