UPDATE Image compression updated for Mobile

--- a/src/app.html
+++ b/src/app.html
@@ -25,9 +25,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="preconnect" href="https://images.prismic.io" crossorigin />
   
-  <!-- Preload critical hero image (LCP element) - responsive -->
-  <link rel="preload" href="https://images.prismic.io/hotel-ludwig-van-beethoven/aKRlHaTt2nPbadSU_hlvb_backside_header.webp?auto=format%2Ccompress&fit=crop&q=60&w=390&h=203&fm=webp" as="image" type="image/webp" fetchpriority="high" media="(max-width: 768px)" />
-  <link rel="preload" href="https://images.prismic.io/hotel-ludwig-van-beethoven/aKRlHaTt2nPbadSU_hlvb_backside_header.webp?auto=format%2Ccompress&fit=crop&q=75&w=1920&h=799&fm=webp" as="image" type="image/webp" fetchpriority="high" media="(min-width: 769px)" />
+  <!-- Preload critical hero image (LCP element) - responsive with optimized compression -->
+  <link rel="preload" href="https://images.prismic.io/hotel-ludwig-van-beethoven/aKRlHaTt2nPbadSU_hlvb_backside_header.webp?auto=format%2Ccompress&fit=crop&q=55&w=390&h=203&fm=webp" as="image" type="image/webp" fetchpriority="high" media="(max-width: 768px)" />
+  <link rel="preload" href="https://images.prismic.io/hotel-ludwig-van-beethoven/aKRlHaTt2nPbadSU_hlvb_backside_header.webp?auto=format%2Ccompress&fit=crop&q=65&w=1920&h=799&fm=webp" as="image" type="image/webp" fetchpriority="high" media="(min-width: 769px)" />
   
   <!-- Load fonts asynchronously to prevent render blocking -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Crimson+Text:wght@400;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" media="print" onload="this.media='all'" />
